[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvpulsations"
version = "1.0.0"
description = "Monte Carlo simulation of stellar pulsation RV noise"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Pedro Figueira", email = "pedro.figueira@iaa.es"}
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.scripts]
rvpulsim = "rvpulsations.cli:main"
